# afterglow-core

./: .gitignore  .pdm-python  AFTERGLOW_CORE_KEY  MANIFEST.in  README.md  afterglow.db  jobs.db  package.json  pyproject.toml  requirements.txt  secrets.j2  setup.py  vetur.config.js  webpack.config.js
afterglow_1_0/: __init__.py  __version__.py  auth.py  data_structures.py  errors.py  oauth2.py  plugins.py  users.py
afterglow_1_0/auth_plugins/: __init__.py  http_auth.py  oauth_client.py  oauth_server.py
afterglow_1_0/resources/: __init__.py  data_files.py  data_providers.py  jobs.py  photometry.py
afterglow_core/: __init__.py  __version__.py  app.py  auth.py  data_structures.py  database.py  default_cfg.py  errors.py  job_server.py  oauth2.py  plugins.py  users.py
afterglow_core/auth_plugins/: __init__.py  google_oauth.py  lco_auth.py  skynet_oauth.py
afterglow_core/errors/: __init__.py  auth.py  catalog.py  data_file.py  data_provider.py  data_provider_local_disk.py  field_cal.py  imaging_survey.py  job.py  oauth2.py
afterglow_core/models/: __init__.py  catalog.py  catalogs.py  data_file.py  data_files.py  data_provider.py  data_providers.py  errors.py  field_cal.py  field_cals.py  image_properties.py  jobs.py  oauth2.py  photometry.py  source_extraction.py  user.py  users.py
afterglow_core/oauth_plugins/: __init__.py  google_oauth.py  skynet_oauth.py
afterglow_core/resources/: __init__.py  base.py  catalogs.py  data_files.py  data_providers.py  field_cals.py  imaging_surveys.py  jobs.py  photometry.py  users.py
afterglow_core/schemas/: __init__.py
afterglow_core/templates/: base-hero.html.j2  base.html.j2  index.html.j2  initialize.html.j2  login.html.j2
afterglow_core/views/: __init__.py  admin.py  default.py  oauth2.py  settings.py  users.py
afterglow_server/: __init__.py  __version__.py  auth.py  data_structures.py  default_cfg.py  errors.py  oauth2.py  plugins.py  users.py
afterglow_server/auth_plugins/: .gitignore  __init__.py  http_auth.py  oauth_client.py  oauth_server.py  skynet_oauth.py
dashboard/: README.md  angular.json  environment.d.ts  karma.conf.js  package.json  proxy.config.json  shims-vue.d.ts  tailwind.config.js  tsconfig.json  vue.config.js
docs/: afterglow_core_ajax_api_v1_0.yaml  afterglow_core_public_api_v1_0.yaml
scripts/: afterglow_access_server.py  afterglow_admin.py  afterglow_core_1_0.py  batch_import_torture_test.py  compare_photometry.py  encrypt.py  migrate_data_files.py  start_afterglow_core.py  test_api.py  torture_test.py
(+322 files in other folders)
