[project]
name = "afterglow_core"
version = "1.0.3"
description='Afterglow Core'
long_description='A RESTful web service for the processing and analysis of astronomical image data.'
url='https://afterglow.skynet.unc.edu'
authors = [
    {name = "Vladimir Kouprianov", email = "vkoupr@unc.edu"},
    {name = "Joshua Haislip", email = "haislip@physics.unc.edu"},
]
dependencies = [
    "alembic ~= 1.13",
    "authlib ~=1.3",
    "astroscrappy ~= 1.2",
    "astropy ~= 6.1",
    "astroquery >= 0.4.7",
    "billiard ~= 4.2",
    "celery ~= 5.4",
    "email_validator ~= 2.1",
    "eventlet >=0.36; sys_platform == 'win32'",
    "exifread >= 3.0",
    "flask ~= 3.0",
    "flask-cors ~= 4.0",
    "flask-login >= 0.6.3",
    "flask-security-too ~= 5.4",
    "flask-sqlalchemy ~=3.1",
    "flask-wtf ~= 1.2",
    "jinja2 ~= 3.1",
    "llvmlite >= 0.42",
    "marshmallow ~= 3.21",
    "matplotlib >=3.9",
    "numba >= 0.59.1",
    "numpy == 1.26.4",
    "oauthlib ~= 3.2",
    "opencv-contrib-python-headless >= 4.10.0",
    "photutils ~= 1.12",
    "pillow >= 10.3",
    "plaster-pastedeploy ~= 1.0",
    "pycryptodome ~= 3.20",
    "python-dateutil ~=2.9",
    "rawpy >= 0.21",
    "requests ~= 2.32",
    "requests-oauthlib ~= 2.0",
    "scipy ~= 1.13",
    "sep ~= 1.2",
    "sqlalchemy ~= 2.0",
    "tbb == 2021.10.0",
    "werkzeug ~= 3.0",
    # extra Skynet dependencies
    "pyjwt ~= 2.10",
    "mysqlclient ~= 2.2",
    "cryptography >= 43.0.1",
    "marshmallow-sqlalchemy ~= 1.0",
    "pymysql ~= 1.1",
    "redis ~= 5.0",
    "sqlalchemy-utils ~= 0.41",
    "wtforms ~= 3.1",
]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {file = "LICENSE"}

[dependency-groups]
prod = [
    "skylib @ git+https://github.com/SkynetRTN/skylib.git@master",
]
dev = [
    "skylib @ git+https://github.com/SkynetRTN/skylib.git@develop",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = true

[tool.pdm.build]
includes = [
    "afterglow_core.db_migration.data_files.versions/",
    "afterglow_core.db_migration.field_cals.versions/",
    "afterglow_core.db_migration.jobs.versions/",
    "afterglow_core.db_migration.users.versions/",
]
excludes = [
    "afterglow_core.resources.data_provider_plugins.skynet_local_provider",
]

[tool.pdm.build.wheel-data]
scripts = ["scripts/*"]
